add unit testing
